--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body{background-color: yellow;}
 
 </style>
 <body>
-<a href="Index.html">Index</a>
+<a href="index.html">Index</a>
 <a href="SECondo.html">Guess</a>
 <a href="Thirdy.html">Stuff</a>
 <h1>Me PAge</h1>
